[gd_scene load_steps=2 format=3 uid="uid://c0baidal0kwg"]

[ext_resource type="Script" path="res://scripts/damage_zone.gd" id="1_nel4o"]

[node name="DamageZone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_nel4o")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
